--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-EMAIL_USER=vibhaeom1105@gmail.com
-EMAIL_PASS=tucnzvsqtnsjnxep
+EMAIL_USER=your_gmail_address@gmail.com
+EMAIL_PASS=your_gmail_app_password
